Log user account

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "facebook-chat-api": "^1.8.0",
     "gifencoder": "^2.0.1",
     "png-file-stream": "^1.2.1"
